Fixes for all URLs in the HTML version of the relax manual.
This fix will appear later at http://www.nmr-relax.com/manual/index.html once the next version of
relax is released.  The trick was to translate the \url{} LaTeX commands which are not recognised by
latex2html into \htmladdnormallink{#1}{#1} commands using a htmlonly environment in the headers.

--- a/docs/latex/relax.tex
+++ b/docs/latex/relax.tex
@@ -231,6 +231,11 @@
 \htmladdtonavigation{\htmladdnormallink{\htmladdimg{http://www.nmr-relax.com/images/pdf_icon_nav.png}}{http://download.gna.org/relax/manual/relax.pdf}}
 \htmladdtonavigation{\htmladdnormallink{\htmladdimg{http://www.nmr-relax.com/images/relax_logo_nav.png}}{http://www.nmr-relax.com}}
 
+% Make hyperrefs work in latex2html.
+\begin{htmlonly}
+  \def\url#1{\htmladdnormallink{#1}{#1}}
+\end{htmlonly}
+
 % Make the index.
 \makeindex
 
