Apostrophe fix in the LaTeX bibliography file.
This will fix my name at http://www.nmr-relax.com/manual/Bibliography.html so that it is not
displayed as dâ€™Auvergne.

--- a/docs/latex/bibliography.bib
+++ b/docs/latex/bibliography.bib
@@ -475,7 +475,7 @@
 }
 
 @Article{Bieri11,
-  Author = {Bieri, Michael and d’Auvergne, Edward and Gooley, Paul},
+  Author = {Bieri, Michael and d'Auvergne, Edward and Gooley, Paul},
   Affiliation = {Department of Biochemistry and Molecular Biology, Bio21 Molecular Science and Biotechnology Institute, The University of Melbourne, Parkville, VIC 3010, Australia},
   Title = {relax{GUI}: a new software for fast and simple {NMR} relaxation data analysis and calculation of ps-ns and $\mu$s motion of proteins},
   Journal = jbnmr,
