Better latex2html support for the relax manual.
The hyperlink command \href{}{} and inline bibliographic reference command \bibentry{} are now
supported in the HTML version of the relax manual.  These are translated into
\htmladdnormallink{#2}{#1} and \citet{#1} command respectively, both of which are supported by
latex2html.  This will significantly improve the documentation at
http://www.nmr-relax.com/manual/index.html.

--- a/docs/latex/relax.tex
+++ b/docs/latex/relax.tex
@@ -230,10 +230,13 @@
 \usepackage{html}
 \htmladdtonavigation{\htmladdnormallink{\htmladdimg{http://www.nmr-relax.com/images/pdf_icon_nav.png}}{http://download.gna.org/relax/manual/relax.pdf}}
 \htmladdtonavigation{\htmladdnormallink{\htmladdimg{http://www.nmr-relax.com/images/relax_logo_nav.png}}{http://www.nmr-relax.com}}
-
-% Make hyperrefs work in latex2html.
 \begin{htmlonly}
+  % Make hyperrefs work in latex2html.
   \def\url#1{\htmladdnormallink{#1}{#1}}
+  \def\href#1#2{\htmladdnormallink{#2}{#1}}
+
+  % Support for \bibentry{}.
+  \def\bibentry#1{\citet{#1}}
 \end{htmlonly}
 
 % Make the index.
