Made better notation of equation.
sr #3154: (https://gna.org/support/?3154) Implementation of Baldwin (2014) B14 model - 2-site exact solution model for all time scales.

This follows the tutorial for adding relaxation dispersion models at:
http://wiki.nmr-relax.com/Tutorial_for_adding_relaxation_dispersion_models_to_relax#The_relax_manual

--- a/docs/latex/dispersion.tex
+++ b/docs/latex/dispersion.tex
@@ -567,8 +567,8 @@ It is selected by setting the model to `B14 full'.
 The equation is
 \begin{subequations}
 \begin{align}
-  \Rtwoeff & = \frac{\RtwozeroA + \RtwozeroB + \kex }{2}-\frac{ N_{\textrm{CYC}} }{ T_{\textrm{rel}} } \cosh{}^{-1}(v_{1c}) \\
-                     & - \frac{1}{T_{\textrm{rel}}}\ln{\left( \frac{1+y}{2} + \frac{1-y}{2\sqrt{v_{1c}^2-1}}(v_2 + 2 \kAB p_D )\right)} \\
+  \Rtwoeff & = \frac{\RtwozeroA + \RtwozeroB + \kex }{2}-\frac{ N_{\textrm{CYC}} }{ T_{\textrm{rel}} } \cosh{}^{-1}(v_{1c}) \nonumber \\
+& \qquad - \frac{1}{T_{\textrm{rel}}}\ln{\left(\frac{1+y}{2} + \frac{1-y}{2\sqrt{v_{1c}^2-1}}(v_2 + 2 \kAB p_D)\right)} \\
     & = \Rtwoeff^{\textrm{CR72}} - \frac{1}{T_{\textrm{rel}}}\ln{\left( \frac{1+y}{2} + \frac{1-y}{2\sqrt{v_{1c}^2-1}}(v_2 + 2\kAB p_D )\right)} ,
 \end{align}
 \end{subequations}
@@ -579,7 +579,7 @@ where
 \begin{align}
     v_{1c} & = F_0\cosh{\left(\tau_{\textrm{CP}}E_0\right)}-F_2\cosh{\left(\tau_{\textrm{CP}}E_2\right)} \\
     v_{1s} & = F_0\sinh{\left(\tau_{\textrm{CP}}E_0\right)}-F_2\sinh{\left(\tau_{\textrm{CP}}E_2\right)}  \\
-    v_{2}N & = v_{1s}\left(O_B-O_A\right)+4O_B F_1^a \sinh{\left(\tau_{\textrm{CP}}E_1\right)} \nonumber \\
+    v_{2}N & = v_{1s}\left(O_B-O_A\right)+4O_B F_1^a \sinh{\left(\tau_{\textrm{CP}}E_1\right)} \\
     p_D N & = v_{1s} + \left(F_1^a+F_1^b\right)\sinh{\left(\tau_{\textrm{CP}}E_1\right)} \\
     v_3 & = \left( v_2^2 + 4 \kBA \kAB p_D^2 \right)^{1/2} \\
     y & = \left( \frac{v_{1c}-v_3}{v_{1c}+v_3} \right)^{N_{\textrm{CYC}}}
