Changed that taucpmg = 1 / 4*nucpmg and not taucpmg = 1 / nucpmg.
sr #3154: (https://gna.org/support/?3154) Implementation of Baldwin (2014) B14 model - 2-site exact solution model for all time scales.

This follows the tutorial for adding relaxation dispersion models at:
http://wiki.nmr-relax.com/Tutorial_for_adding_relaxation_dispersion_models_to_relax#The_relax_manual

--- a/docs/latex/dispersion.tex
+++ b/docs/latex/dispersion.tex
@@ -609,7 +609,7 @@ Define substutions for 'stay' and 'swap' factors.
 \end{subequations}
 
 Weighting factors for frequencies ($E_{0-2}$) emerging from a single CPMG block, ($F_{0-2}$).
-$\taucpmg = 1 / \nucpmg $.
+Here $\taucpmg = 1 / 4\nucpmg $.
 \begin{subequations}
 \begin{align}
 	E_0 & =  2 \taucpmg \cdot h_3 \\
