--- a/docs/latex/dispersion_models.tex
+++ b/docs/latex/dispersion_models.tex
@@ -42,7 +42,7 @@ LM63 3-site              & Analytic & 3     & $\{\Rtwozero, \dots, \PhiexB, \kB,
 CR72                     & Analytic & 2     & $\{\Rtwozero, \dots, \pA, \dw, \kex\}$              & $\pA > \pB$, not very slow exchange & \citet{CarverRichards72} \\
 CR72 full                & Analytic & 2     & $\{\RtwozeroA, \RtwozeroB, \dots, \pA, \dw, \kex\}$ & $\pA > \pB$, not very slow exchange & \citet{CarverRichards72} \\
 IT99                     & Analytic & 2     & $\{\Rtwozero, \dots, \pA, \dw, \kex\}$              & $\pA \gg \pB$                     & \citet{IshimaTorchia99} \\
-TSMFK01                  & Analytic & 2     & $\{\RtwozeroA, \dots, \dw, \kAB\}$                  & $\pA \gg \pB$                     & \citet{Tollinger01} \\
+TSMFK01                  & Analytic & 2     & $\{\RtwozeroA, \dots, \dw, \kAB\}$                  & $\pA \gg \pB$ slow exchange       & \citet{Tollinger01} \\
 B14                      & Analytic & 2     & $\{\Rtwozero, \dots, \pA, \dw, \kex\}$              & $\pA > \pB$,                      & \citet{Baldwin2014} \\
 B14 full                 & Analytic & 2     & $\{\RtwozeroA, \RtwozeroB, \dots, \pA, \dw, \kex\}$ & $\pA > \pB$,                      & \citet{Baldwin2014} \\
 NS CPMG 2-site expanded  & Numeric  & 2     & $\{\Rtwozero, \dots, \pA, \dw, \kex\}$              & $\pA > \pB$                       & \citet{Tollinger01} \\
