Fix for equation alignment for model B14.
sr #3154: (https://gna.org/support/?3154) Implementation of Baldwin (2014) B14 model - 2-site exact solution model for all time scales.

This follows the tutorial for adding relaxation dispersion models at:
http://wiki.nmr-relax.com/Tutorial_for_adding_relaxation_dispersion_models_to_relax#The_relax_manual

--- a/docs/latex/dispersion.tex
+++ b/docs/latex/dispersion.tex
@@ -621,7 +621,7 @@ Here $\taucpmg = 1 / 4\nucpmg $.
 Final result, with identities to assist efficient matrix exponentiation optimised for numerical calculation.
 \begin{subequations}
 \begin{align}
-	\nu_{1c} = F_0  \cosh(E_0) - F_2 \cos(E_2) \\
+	\nu_{1c} & = F_0  \cosh(E_0) - F_2 \cos(E_2) \\
 	\nu_{1s} & = F_0  \sinh(E_0) - F_2 \sin(E_2)i \\
 	\nu_{3} & = \sqrt({\nu_{1c}^2 - 1} \\
 	\nu_{4} & = F_1^b (-\alpha_- - h_3 ) + F_1^b (\dw - h_4) i \\
