--- a/docs/latex/dispersion.tex
+++ b/docs/latex/dispersion.tex
@@ -623,7 +623,7 @@ Final result, with identities to assist efficient matrix exponentiation optimise
 \begin{align}
 	\nu_{1c} & = F_0  \cosh(E_0) - F_2 \cos(E_2) \\
 	\nu_{1s} & = F_0  \sinh(E_0) - F_2 \sin(E_2)i \\
-	\nu_{3} & = \sqrt({\nu_{1c}^2 - 1} \\
+	\nu_{3} & = \sqrt{\nu_{1c}^2 - 1} \\
 	\nu_{4} & = F_1^b (-\alpha_- - h_3 ) + F_1^b (\dw - h_4) i \\
 	\nu_{5} & =(-\Delta \Rtwozero + \kex + \dw i) \nu_{1s} + 2 (\nu_{4} + \kAB F_1^{a+b}) \sinh(E_1) \\
 	y & = \left( \frac{\nu_{1c} - \nu_{3}}{\nu_{1c} + \nu_{3}} \right) ^ {N_{\textrm{CYC}}} \\
