Sign fix in manual. The 1/taucpmg was taken wrong outside parenthesis.
sr #3154: (https://gna.org/support/?3154) Implementation of Baldwin (2014) B14 model - 2-site exact solution model for all time scales.

This follows the tutorial for adding relaxation dispersion models at:
http://wiki.nmr-relax.com/Tutorial_for_adding_relaxation_dispersion_models_to_relax#Debugging

--- a/docs/latex/dispersion.tex
+++ b/docs/latex/dispersion.tex
@@ -629,7 +629,7 @@ Final result, with identities to assist efficient matrix exponentiation optimise
 	y & = \left( \frac{\nu_{1c} - \nu_{3}}{\nu_{1c} + \nu_{3}} \right) ^ {N_{\textrm{CYC}}} \\
 	T & = \frac{1}{2}(1 + y) + \frac{(1 - y)\nu_{5}}{2 \nu_{3}N} \\
 	\Rtwoeff & = \frac{(\RtwozeroA + \RtwozeroB + \kex)}{2} \nonumber \\
-    & \qquad - \frac{1}{\taucpmg} \left( N_{\textrm{CYC}} \cdot \textrm{arcosh}(\operatorname{Re}(\nu_{1c})) -  \log(\operatorname{Re}(T)) \right)	
+    & \qquad - \frac{1}{\taucpmg} \left( N_{\textrm{CYC}} \cdot \textrm{arcosh}(\operatorname{Re}(\nu_{1c})) +  \log(\operatorname{Re}(T)) \right)	
 \end{align}
 \end{subequations}
 
