--- a/docs/latex/dispersion.tex
+++ b/docs/latex/dispersion.tex
@@ -628,8 +628,8 @@ Final result, with identities to assist efficient matrix exponentiation optimise
 	\nu_{5} & =(-\Delta \Rtwozero + \kex + \dw i) \nu_{1s} + 2 (\nu_{4} + \kAB F_1^{a+b}) \sinh(E_1) \\
 	y & = \left( \frac{\nu_{1c} - \nu_{3}}{\nu_{1c} + \nu_{3}} \right) ^ {N_{\textrm{CYC}}} \\
 	T & = \frac{1}{2}(1 + y) + \frac{(1 - y)\nu_{5}}{2 \nu_{3}N} \\
-	\Rtwoeff & = \frac{(\RtwozeroA + \RtwozeroB + \kex)}{2} \nonumber \\
-    & \qquad - \frac{1}{\taucpmg} \left( N_{\textrm{CYC}} \cdot \textrm{arcosh}(\operatorname{Re}(\nu_{1c})) +  \log(\operatorname{Re}(T)) \right)	
+	\Rtwoeff{}_{\_ \textrm{CR72}} & = \frac{(\RtwozeroA + \RtwozeroB + \kex)}{2} - \frac{N_{\textrm{CYC}}}{\taucpmg} \, \textrm{arcosh}(\, \operatorname{Re}(\nu_{1c}) \, ) \\
+	\Rtwoeff{} & = \Rtwoeff{}_{\_ \textrm{CR72}} - \frac{1}{\taucpmg} \log(\operatorname{Re}(T)) \\
 \end{align}
 \end{subequations}
 
