Better latex2html support for the relax manual, specifically the dispersion software comparison table.
The \yes and \no commands are now better processed as HTML, and the rotating package 'rotate'
environment is replaced by nothing.  This will improve the dispersion software comparison table at
http://www.nmr-relax.com/manual/Comparison_dispersion_analysis_software.html.

--- a/docs/latex/relax.tex
+++ b/docs/latex/relax.tex
@@ -237,6 +237,13 @@
 
   % Support for \bibentry{}.
   \def\bibentry#1{\citet{#1}}
+
+  % Kill the rotate environment that latex2html cannot handle.
+  \renewenvironment{rotate}[1]{}
+
+  % Redefine some commands to be prettier in HTML.
+  \newcommand{\no}{-}
+  \newcommand{\yes}{y}
 \end{htmlonly}
 
 % Make the index.
