Fixes for the HTML version of the relax manual.
The renewal of the \theequation command in the model-free and relaxation dispersion chapters was
causing all equation numbers in latex2html to be broken.  By placing these in a latexonly
environment, the problem is avoided in the HTML version at www.nmr-relax.com/manual/.

--- a/docs/latex/dispersion.tex
+++ b/docs/latex/dispersion.tex
@@ -708,6 +708,7 @@ It has been modified from the original for speed.
 See the \module{lib\pysep{}dispersion\pysep{}ns\pyus{}cpmg\pyus{}2site\pyus{}expanded} module for more details including the original code.
 Further simplifications can be found in the code.
 
+\begin{latexonly}
 \begin{subequations}
 \renewcommand{\theequation}{\theparentequation .\arabic{equation}}
 \begin{align}
@@ -769,6 +770,7 @@ Further simplifications can be found in the code.
             & \qquad \qquad                   + (t_{120} t_{122} - t_{116} t_{120}) t_{113} t_{118} t_{127} \kAB \Big].
 \end{align}
 \end{subequations}
+\end{latexonly}
 
 The relative peak intensities, magnetisation, and effective $\Rtwo$ relaxation rate are calculated as
 \begin{subequations}
