Fix for the previous commit.

--- a/docs/latex/model-free.tex
+++ b/docs/latex/model-free.tex
@@ -298,16 +298,16 @@ Extending the list of models given in \citet{Mandel95, Fushman97, Orekhov99b, Ko
 \end{latexonly}
 \begin{htmlonly}
 \begin{eqnarray}
- m0 &= \{\},                                   \label{model: m0} \\
- m1 &= \{S^2\},                                \label{model: m1} \\
- m2 &= \{S^2, \tau_e\},                        \label{model: m2} \\
- m3 &= \{S^2, R_{ex}\},                        \label{model: m3} \\
- m4 &= \{S^2, \tau_e, R_{ex}\},                \label{model: m4} \\
- m5 &= \{S^2, S^2_f, \tau_s\},                 \label{model: m5} \\
- m6 &= \{S^2, \tau_f, S^2_f, \tau_s\},         \label{model: m6} \\
- m7 &= \{S^2, S^2_f, \tau_s, R_{ex}\},         \label{model: m7} \\
- m8 &= \{S^2, \tau_f, S^2_f, \tau_s, R_{ex}\}, \label{model: m8} \\
- m9 &= \{R_{ex}\}.                             \label{model: m9}
+ m0 &=& \{\},                                   \label{model: m0} \\
+ m1 &=& \{S^2\},                                \label{model: m1} \\
+ m2 &=& \{S^2, \tau_e\},                        \label{model: m2} \\
+ m3 &=& \{S^2, R_{ex}\},                        \label{model: m3} \\
+ m4 &=& \{S^2, \tau_e, R_{ex}\},                \label{model: m4} \\
+ m5 &=& \{S^2, S^2_f, \tau_s\},                 \label{model: m5} \\
+ m6 &=& \{S^2, \tau_f, S^2_f, \tau_s\},         \label{model: m6} \\
+ m7 &=& \{S^2, S^2_f, \tau_s, R_{ex}\},         \label{model: m7} \\
+ m8 &=& \{S^2, \tau_f, S^2_f, \tau_s, R_{ex}\}, \label{model: m8} \\
+ m9 &=& \{R_{ex}\}.                             \label{model: m9}
 \end{eqnarray}
 \end{htmlonly}
 
