Added another sentence telling the user that multiple field relaxation data is essential.
This is for the model-free dauvergne_protocol auto-analysis section of the relax manual and relates
to bug #21799 (https://gna.org/bugs/?21799).

--- a/docs/latex/model-free.tex
+++ b/docs/latex/model-free.tex
@@ -961,6 +961,7 @@ Here a new, fully automated model-free optimisation protocol will be presented.
 This protocol, defined in \citet{dAuvergneGooley07} and \citet{dAuvergneGooley08b}, is significantly different from all those that came before, reversing the diffusion seeded paradigm as detailed below.
 Within relax it is referred to as the ``new protocol'' or the ``d'Auvergne protocol''.
 The later name is to allow for more advanced protocols to be developed and added to relax by adventurous users in the future.
+Note that for advanced model-free analysis protocols, such as this one, that multiple field relaxation data is essential.
 
 
 % The model-free models.
