Another sentence about multiple field relaxation data added to the manual.
This is for the model-free dauvergne_protocol GUI section of the relax manual and relates to bug
#21799 (https://gna.org/bugs/?21799).

--- a/docs/latex/model-free.tex
+++ b/docs/latex/model-free.tex
@@ -1584,6 +1584,7 @@ This automatic analysis script hides all of the complexity of the full protocol 
 A model-free analysis can be performed within the GUI (see Figure~\ref{fig: screenshot: model-free analysis} on page~\pageref{fig: screenshot: model-free analysis}).
 This analysis is that of the fully automated d'Auvergne protocol which can be chosen via the analysis selection wizard (Figure~\ref{fig: screenshot: analysis wizard} on page~\pageref{fig: screenshot: analysis wizard}).
 Please see Section~\ref{sect: new model-free protocol} on page~\pageref{sect: new model-free protocol} for a description of this new model-free protocol.
+As mentioned previously, please note that this protocol requires multiple field relaxation data.
 
 The GUI is designed to be robust -- you should be able to set up all the input data and parameters in any order with relax returning you warnings if something is missing.
 The analysis will only execute once everything is correctly set up.
