Changed an 'align' environment to 'equation' as there was only one equation.

--- a/docs/latex/dispersion.tex
+++ b/docs/latex/dispersion.tex
@@ -538,9 +538,9 @@ It is selected by setting the model to `TSMFK01'.
 A particularly interesting feature of the dispersion curves is the damped oscillations, which occur at low CPMG field strengths, and is solely a function of the chemical shift difference between the two sites (i.e.\ independent of the rate of exchange).
 
 The equation is:
-\begin{align}
+\begin{equation}
     \Rtwoeff = \RtwozeroA + \kAB - \kAB \frac{\sin{(\dw \cdot \taucpmg )}}{\dw \cdot \taucpmg}
-\end{align}
+\end{equation}
 
 The reference for this equation is:
 \begin{itemize}
