--- a/docs/latex/dispersion.tex
+++ b/docs/latex/dispersion.tex
@@ -584,7 +584,7 @@ Establish the complex free precession Eigenfrequency.
 	\zeta & = 2 \dw \alpha_- \\
 	\Psi & = \alpha_-^2 + 4 \kAB \kBA - \dw^2 \\
 	h_3 &= \frac{1}{\sqrt{2}}\sqrt{ \Psi + \sqrt{\zeta^2 + \Psi^2} } \\
-    h_4 &= \frac{1}{\sqrt{2}}\sqrt{ -\Psi + \sqrt{\zeta^2 + \Psi^2} } \\
+    h_4 &= \frac{1}{\sqrt{2}}\sqrt{ -\Psi + \sqrt{\zeta^2 + \Psi^2} }
 \end{align}
 \end{subequations}
 
@@ -604,7 +604,7 @@ Define substutions for 'stay' and 'swap' factors.
 	F_0 & = (\dw^2 + h_3^2) / NN^* \\
 	F_2 & = (\dw^2 - h_4^2) / NN^* \\
 	F_1^b & = (\dw + h_4) (\dw - h_3 i) / NN^* \\
-	F_1^{a+b} & = (2\dw^2 + \zeta i) / NN^* \\
+	F_1^{a+b} & = (2\dw^2 + \zeta i) / NN^*
 \end{align}
 \end{subequations}
 
@@ -629,7 +629,7 @@ Final result, with identities to assist efficient matrix exponentiation optimise
 	y & = \left( \frac{\nu_{1c} - \nu_{3}}{\nu_{1c} + \nu_{3}} \right) ^ {N_{\textrm{CYC}}} \\
 	T & = \frac{1}{2}(1 + y) + \frac{(1 - y)\nu_{5}}{2 \nu_{3}N} \\
 	\Rtwoeff{}_{\_ \textrm{CR72}} & = \frac{(\RtwozeroA + \RtwozeroB + \kex)}{2} - \frac{N_{\textrm{CYC}}}{\taucpmg} \, \textrm{arcosh}(\, \operatorname{Re}(\nu_{1c}) \, ) \\
-	\Rtwoeff{} & = \Rtwoeff{}_{\_ \textrm{CR72}} - \frac{1}{\taucpmg} \log(\operatorname{Re}(T)) \\
+	\Rtwoeff{} & = \Rtwoeff{}_{\_ \textrm{CR72}} - \frac{1}{\taucpmg} \log(\operatorname{Re}(T))
 \end{align}
 \end{subequations}
 
