The f00 equation in the B14 dispersion model section of the manual is a single equation.
The 'subequations' and 'align' environments are therefore superfluous.

--- a/docs/latex/dispersion.tex
+++ b/docs/latex/dispersion.tex
@@ -590,11 +590,9 @@ Establish the complex free precession Eigenfrequency.
 
 The ground state ensemble evolution frequency $f_{00}$ expressed in separated real and imaginary components, in terms
 of definitions $\zeta , \Psi , h_3 , h_4$.
-\begin{subequations}
-\begin{align}
-	f_{00} & = \frac{1}{2}(\RtwozeroA + \RtwozeroB + \kex) + \frac{1}{2}(\dw - h_4) i
-\end{align}
-\end{subequations}
+\begin{equation}
+	f_{00} = \frac{1}{2}(\RtwozeroA + \RtwozeroB + \kex) + \frac{1}{2}(\dw - h_4) i
+\end{equation}
 
 Define substutions for 'stay' and 'swap' factors.
 \begin{subequations}
