Fixes for quotation marks in the B14 dispersion model section of the manual.
LaTeX requires `' for single quotes rather than ''.

--- a/docs/latex/dispersion.tex
+++ b/docs/latex/dispersion.tex
@@ -593,7 +593,7 @@ of definitions $\zeta , \Psi , h_3 , h_4$ is
 	f_{00} = \frac{1}{2}(\RtwozeroA + \RtwozeroB + \kex) + \frac{1}{2}(\dw - h_4) i .
 \end{equation}
 
-Define substutions for 'stay' and 'swap' factors are
+Define substutions for `stay' and `swap' factors are
 \begin{subequations}
 \begin{align}
 	N & = h_3 + h_4 i , \\
