--- a/docs/latex/relax.tex
+++ b/docs/latex/relax.tex
@@ -199,6 +199,7 @@
 \newcommand{\RonerhoprimeB}{\mathrm{R}_{1\rho B}'}
 \newcommand{\RonerhoprimeC}{\mathrm{R}_{1\rho C}'}
 \newcommand{\Rtwoeff}{\mathrm{R}_\textrm{2eff}}
+\newcommand{\RtwoeffCR}{\mathrm{R}_\textrm{2eff}^{\textrm{CR72}}}
 \newcommand{\Rtwozero}{\mathrm{R}_2^0}
 \newcommand{\RtwozeroA}{\mathrm{R}_\mathrm{2A}^0}
 \newcommand{\RtwozeroB}{\mathrm{R}_\mathrm{2B}^0}
