--- a/docs/latex/dispersion.tex
+++ b/docs/latex/dispersion.tex
@@ -590,18 +590,18 @@ Establish the complex free precession Eigenfrequency with
 The ground state ensemble evolution frequency $f_{00}$ expressed in separated real and imaginary components, in terms
 of definitions $\zeta , \Psi , h_3 , h_4$ is
 \begin{equation}
-	f_{00} = \frac{1}{2}(\RtwozeroA + \RtwozeroB + \kex) + \frac{1}{2}(\dw - h_4) i .
+	f_{00} = \frac{1}{2}(\RtwozeroA + \RtwozeroB + \kex) + \frac{\imath}{2}(\dw - h_4) .
 \end{equation}
 
 Define substutions for `stay' and `swap' factors are
 \begin{subequations}
 \begin{align}
-	N & = h_3 + h_4 i , \\
+	N & = h_3 + \imath h_4 , \\
 	NN^* & = h_3^2 + h_42 , \\
 	F_0 & = (\dw^2 + h_3^2) / NN^* , \\
 	F_2 & = (\dw^2 - h_4^2) / NN^* , \\
-	F_1^b & = (\dw + h_4) (\dw - h_3 i) / NN^* , \\
-	F_1^{a+b} & = (2\dw^2 + \zeta i) / NN^* .
+	F_1^b & = (\dw + h_4) (\dw - \imath h_3) / NN^* , \\
+	F_1^{a+b} & = (2\dw^2 + \imath \zeta) / NN^* .
 \end{align}
 \end{subequations}
 
@@ -610,7 +610,7 @@ Weighting factors for frequencies ($E_{0-2}$) emerging from a single CPMG block,
 \begin{align}
 	E_0 & =  2 \taucpmg \cdot h_3 , \\
 	E2 & =  2 \taucpmg \cdot  h_4 , \\
-	E1 & = (h_3 - h_4 i) \cdot \taucpmg .
+	E1 & = (h_3 - \imath h_4) \cdot \taucpmg .
 \end{align}
 \end{subequations}
 
@@ -619,10 +619,10 @@ Final result, with identities to assist efficient matrix exponentiation optimise
 \begin{subequations}
 \begin{align}
 	\nu_{1c} & = F_0  \cosh(E_0) - F_2 \cos(E_2) , \\
-	\nu_{1s} & = F_0  \sinh(E_0) - F_2 \sin(E_2)i , \\
+	\nu_{1s} & = F_0  \sinh(E_0) - \imath F_2 \sin(E_2), \\
 	\nu_{3} & = \sqrt{\nu_{1c}^2 - 1} , \\
-	\nu_{4} & = F_1^b (-\alpha_- - h_3 ) + F_1^b (\dw - h_4) i , \\
-	\nu_{5} & =(-\Delta \Rtwozero + \kex + \dw i) \nu_{1s} + 2 (\nu_{4} + \kAB F_1^{a+b}) \sinh(E_1) , \\
+	\nu_{4} & = F_1^b (-\alpha_- - h_3 ) + \imath F_1^b (\dw - h_4) , \\
+	\nu_{5} & =(-\Delta \Rtwozero + \kex + \imath \dw) \nu_{1s} + 2 (\nu_{4} + \kAB F_1^{a+b}) \sinh(E_1) , \\
 	y & = \left( \frac{\nu_{1c} - \nu_{3}}{\nu_{1c} + \nu_{3}} \right) ^ {N_{\textrm{CYC}}} , \\
 	T & = \frac{1}{2}(1 + y) + \frac{(1 - y)\nu_{5}}{2 \nu_{3}N} , \\
 	\RtwoeffCR & = \frac{(\RtwozeroA + \RtwozeroB + \kex)}{2} - \frac{N_{\textrm{CYC}}}{\taucpmg} \, \textrm{arcosh}(\, \operatorname{Re}(\nu_{1c}) \, ) , \\
