--- a/docs/latex/dispersion.tex
+++ b/docs/latex/dispersion.tex
@@ -620,11 +620,11 @@ Final result, with identities to assist efficient matrix exponentiation optimise
 \begin{align}
 	\nu_{1c} & = F_0  \cosh(E_0) - F_2 \cos(E_2) , \\
 	\nu_{1s} & = F_0  \sinh(E_0) - \imath F_2 \sin(E_2), \\
-	\nu_{3} & = \sqrt{\nu_{1c}^2 - 1} , \\
-	\nu_{4} & = F_1^b (-\alpha_- - h_3 ) + \imath F_1^b (\dw - h_4) , \\
-	\nu_{5} & =(-\Delta \Rtwozero + \kex + \imath \dw) \nu_{1s} + 2 (\nu_{4} + \kAB F_1^{a+b}) \sinh(E_1) , \\
-	y & = \left( \frac{\nu_{1c} - \nu_{3}}{\nu_{1c} + \nu_{3}} \right) ^ {N_{\textrm{CYC}}} , \\
-	T & = \frac{1}{2}(1 + y) + \frac{(1 - y)\nu_{5}}{2 \nu_{3}N} , \\
+	\nu_3 & = \sqrt{\nu_{1c}^2 - 1} , \\
+	\nu_4 & = F_1^b (-\alpha_- - h_3 ) + \imath F_1^b (\dw - h_4) , \\
+	\nu_5 & =(-\Delta \Rtwozero + \kex + \imath \dw) \nu_{1s} + 2 (\nu_4 + \kAB F_1^{a+b}) \sinh(E_1) , \\
+	y & = \left( \frac{\nu_{1c} - \nu_3}{\nu_{1c} + \nu_3} \right) ^ {N_{\textrm{CYC}}} , \\
+	T & = \frac{1}{2}(1 + y) + \frac{(1 - y)\nu_5}{2 \nu_3 N} , \\
 	\RtwoeffCR & = \frac{(\RtwozeroA + \RtwozeroB + \kex)}{2} - \frac{N_{\textrm{CYC}}}{\taucpmg} \, \textrm{arcosh}(\, \operatorname{Re}(\nu_{1c}) \, ) , \\
 	\Rtwoeff & = \RtwoeffCR - \frac{1}{\taucpmg} \log(\operatorname{Re}(T)) .
 \end{align}
