The ncyc variable is now defined in the LaTeX preamble.
This is for the B14 model (http://wiki.nmr-relax.com/B14) section of the dispersion chapter.

--- a/docs/latex/relax.tex
+++ b/docs/latex/relax.tex
@@ -169,6 +169,7 @@
 \newcommand{\kCA}{\textrm{k}_\textrm{CA}}
 \newcommand{\kBC}{\textrm{k}_\textrm{BC}}
 \newcommand{\kCB}{\textrm{k}_\textrm{CB}}
+\newcommand{\ncyc}{n_\textrm{cyc}}
 \newcommand{\nucpmg}{\nu_\textrm{CPMG}}
 \newcommand{\omegaA}{\omega_\textrm{A}}
 \newcommand{\omegaB}{\omega_\textrm{B}}
